--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,10 +2,11 @@
     "tasks": [
         {
             "type": "cppbuild",
-            "label": "C/C++: gcc build active file",
+            "label": "build1",
             "command": "/usr/bin/gcc",
             "args": [
                 "-fdiagnostics-color=always",
+                "-fsanitize=address",
                 "-g",
                 "${file}",
                 "-o",
@@ -29,6 +30,7 @@
             "command": "/usr/bin/gcc-12",
             "args": [
                 "-fdiagnostics-color=always",
+                "-fsanitize=address",
                 "-g",
                 "${file}",
                 "-o",
