--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -35,7 +35,7 @@
 			"request": "launch",
 			"name": "lldb",
 			"preLaunchTask": "build1",
-			"program": "${workspaceFolder}/main",
+			"program": "${workspaceFolder}/a.out",
 			"args": ["4 3 2 1 1 2 2 2 4 3 2 1 1 2 2 2"],
 			"cwd": "${workspaceFolder}"
 		}
